methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  avance()
  ^SlugTracking:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (getCouleurSol()==Color.green) {
  ^SlugTracking:8: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return test
  ^SlugTracking:19: error: ';' expected but 'else' found.
      else {
      ^